# shimmer

./: .gitignore  .shimmer_context  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  demo.sh  run_sanitizers.sh  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: parsing_bench.rs
benchmarks/: README.md
benchmarks/agentic/: generate_swe_bench.py  simulated_edit_file.py  swe_bench_agy.py  swe_bench_multi.py  swe_bench_native.py  swe_bench_ollama.py  swe_bench_rest.py  swe_bench_shimmer.py  swe_bench_single.py  verify_edits.py
benchmarks/agentic/harness/: cli.py  engine.py  keywords.py  matching.py  patch.py  prompts.py  reporting.py  snippets.py  validation.py
benchmarks/parameter_sweeps/: sweep.py  sweep_m.py
benchmarks/quality/: evaluate_quality.py
benchmarks/stress_test/: generate_stress_test.py  run_stress_test.sh
benchmarks/system/: throughput_and_memory.py
data/: eval_results.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  DESIGN.md  EVALUATIONS.md  LIMITATIONS.md  ONBOARDING.md
docs/adr/: 001-append-not-rollback.md  002-greedy-sampling-required.md  003-validators-at-turn-boundaries.md
docs/swe-bench/: report.md
scripts/: test_memory_leaks.sh
src/: compaction.rs  daemon.rs  engine.rs  interceptor.rs  lib.rs  main.rs  models.rs  preprocessor.rs  server.rs  speculative.rs  tool.rs
src/agent/: compaction.rs  mod.rs  sampling.rs  state.rs  swarm.rs  tools.rs  validators.rs
tests/: smoke_test.py  tdd_enforcement_tests.rs  test_agentless.py  test_kv_cache_integrity.rs
